--- a/akses.html
+++ b/akses.html
@@ -11,30 +11,30 @@
   <div class="header-bg"></div>
 
   <div class="profile-photo-wrapper">
-    <img src="jijel.jpeg" alt="profile" class="profile-photo" />
+    <img src="profile.jpg" alt="profile" class="profile-photo" />
   </div>
 
   <div class="header-text">
-    <h1>Silvy Afrilia Salsadila</h1>
-    <p class="subtitle">Bukan Sulap Bukan She/Her • Editor</p>
-    <p>Bogor, Indonesia • <a href="https://github.com/silvyafr">github silvy</a></p>
-    <p><strong>Informatika</strong> — Universitas Ipwija</p>
+    <h1>ÆSPA</h1>
+    <p class="subtitle">Hi, æspa here</p>
+    <p>Bogor, Indonesia • <a href="https://instagram.com/aespa">our ig</a></p>
+    <p><strong>Girl Group</strong> — South Korea</p>
   </div>
 
   <div class="action-buttons">
 
 
-    <button id="loginBtn">Login untuk akses data</button>
+    <button id="loginBtn">Photoshoot</button>
 <button id="logoutBtn">Logout</button>
 
   </div>
 
   <div id="content"></div>
 
-<div id="produk" class="content-card">
-  <h3>Produk Pilihan</h3>
+<div id="æspa" class="content-card">
+  <h3>æspa</h3>
   <div id="produk-list">
-    <p>Memuat produk...</p>
+    <p>Aespa (/ˈɛsˌpɑː/ Hangul: 에스파; RR: eseupa; MR: esŭp'a biasanya digayakan dalam huruf kecil semua atau æspa) adalah girl grup asal Korea Selatan yang dibentuk oleh SM Entertainment. Grup ini terdiri dari empat anggota: Karina, Giselle, Winter dan Ningning. Mereka melakukan debut pada 17 November 2020 dengan single "Black Mamba".</p>
   </div>
 </div>
 
