--- a/akses.html
+++ b/akses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Silvy Afrilia Salsadila</title>
+  <title>Aespa HERE!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -17,7 +17,7 @@
   <div class="header-text">
     <h1>ÆSPA</h1>
     <p class="subtitle">Hi, æspa here</p>
-    <p>Bogor, Indonesia • <a href="https://instagram.com/aespa">our ig</a></p>
+    <p>Karina, Ning Ning, Gisele, Winter• <a href="https://instagram.com/aespa_official">our ig</a></p>
     <p><strong>Girl Group</strong> — South Korea</p>
   </div>
 
