--- a/akses.html
+++ b/akses.html
@@ -39,7 +39,7 @@
 </div>
 
   <div class="content-card">
-    <h3>Sosial Media</h3>
+    <h3>*bold "Sosial Media"</h3>
     <ul>
       <li><strong>instagram :</strong> http://instagram.com/vvisill</li>
       <li><strong>credly :</strong> https://www.credly.com/users/silvyafr</li>
