--- a/akses.html
+++ b/akses.html
@@ -39,7 +39,7 @@
 </div>
 
   <div class="content-card">
-    <h3>*bold "Sosial Media"</h3>
+    <h3 style="font-size: 15px;"><strong>Sosial Media</strong></h3>
     <ul>
       <li><strong>instagram :</strong> http://instagram.com/vvisill</li>
       <li><strong>credly :</strong> https://www.credly.com/users/silvyafr</li>
