--- a/akses.html
+++ b/akses.html
@@ -32,7 +32,7 @@
   <div id="content"></div>
 
 <div id="æspa" class="content-card">
-  <h3>æspa</h3>
+  <h3 style="font-size: 28px;"><strong>æspa</strong></h3>
   <div id="produk-list">
     <p>Aespa (/ˈɛsˌpɑː/ Hangul: 에스파; RR: eseupa; MR: esŭp'a biasanya digayakan dalam huruf kecil semua atau æspa) adalah girl grup asal Korea Selatan yang dibentuk oleh SM Entertainment. Grup ini terdiri dari empat anggota: Karina, Giselle, Winter dan Ningning. Mereka melakukan debut pada 17 November 2020 dengan single "Black Mamba".</p>
   </div>
