--- a/akses.html
+++ b/akses.html
@@ -25,14 +25,6 @@
 
 
     <button id="loginBtn">Photoshoot</button>
-    <div id="photoshoot-section" class="content-card" style="display: none;">
-  <h2>Photoshoot Gallery</h2>
-  <div class="gallery">
-    <img src="foto1.jpg" alt="Photoshoot 1" style="width: 200px;" />
-    <img src="foto2.jpg" alt="Photoshoot 2" style="width: 200px;" />
-  </div>
-</div>
-
 <button id="logoutBtn">Logout</button>
 
   </div>
@@ -124,22 +116,9 @@ async function loadData() {
 }
 
 
-document.getElementById('loginBtn').addEventListener('click', showPhotoshoot)
+document.getElementById('loginBtn').addEventListener('click', login)
 document.getElementById('logoutBtn').addEventListener('click', logout)
-  function showPhotoshoot() {
-  document.getElementById('photoshoot-section').style.display = 'block'
-    content.innerHTML = `
-  <h2>Photoshoot Gallery</h2>
-  <div class="gallery">
-    <img src="foto1.jpg" alt="Photoshoot 1" style="width: 200px;" />
-    <img src="foto2.jpg" alt="Photoshoot 2" style="width: 200px;" />
-  </div>
-`
-content.innerHTML = `
-  <button onclick="window.location.reload()">Kembali</button>
-`
 
-}
 
 window.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
