--- a/akses.html
+++ b/akses.html
@@ -17,7 +17,7 @@
   <div class="header-text">
     <h1>ÆSPA</h1>
     <p class="subtitle">Hi, æspa here</p>
-    <p>Karina, Ning Ning, Gisele, Winter• <a href="https://instagram.com/aespa_official">our ig</a></p>
+    <p>Karina, Ning Ning, Gisele, Winter • <a href="https://instagram.com/aespa_official">our ig</a></p>
     <p><strong>Girl Group</strong> — South Korea</p>
   </div>
 
@@ -116,7 +116,7 @@ async function loadData() {
 }
 
 
-document.getElementById('photoshootBtn').addEventListener('click', () => {window.location.href = 'photoshoot.html'})
+document.getElementById('PhotoshootBtn').addEventListener('click', () => {window.location.href = 'photoshoot.html'})
 document.getElementById('logoutBtn').addEventListener('click', logout)
 
 
