--- a/photoshoot.html
+++ b/photoshoot.html
@@ -2,14 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Photoshoot Aespa</title>
+  <title>Photoshoot æspa</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f7f7f7;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+    }
+    .photo-card {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      padding: 10px;
+    }
+    .photo-card img {
+      width: 100%;
+      border-radius: 8px;
+    }
+    .photo-name {
+      margin-top: 8px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h1>Photoshoot Aespa</h1>
-  <p>Foto-foto eksklusif dari Karina, Winter, Giselle, dan Ning Ning ✨</p>
-  <img src="k.jpeg" alt="Karina" width="200" />
-  <img src="w.jpeg" alt="Winter" width="200" />
-  <img src="n.jpeg" alt="Ningning" width="200" />
-  <img src="g.jpeg" alt="Giselle" width="200" />
+
+  <h1>Photoshoot æspa 📸</h1>
+  <p>Galeri eksklusif Karina, Winter, Giselle, dan Ningning ✨</p>
+
+  <div class="gallery">
+    <div class="photo-card">
+      <img src="k.jpeg" alt="Karina">
+      <div class="photo-name">Karina</div>
+    </div>
+    <div class="photo-card">
+      <img src="w.jpeg" alt="Winter">
+      <div class="photo-name">Winter</div>
+    </div>
+    <div class="photo-card">
+      <img src="g.jpeg" alt="Giselle">
+      <div class="photo-name">Giselle</div>
+    </div>
+    <div class="photo-card">
+      <img src="n.jpeg" alt="Ningning">
+      <div class="photo-name">Ningning</div>
+    </div>
+  </div>
+
 </body>
 </html>
